# IoT-Ambience-CloudClient

./: .gitignore  CMakeLists.txt  README.md  configure.bat  startup_ble.sh  toolchain-raspberry.cmake
src/: main.cpp
src/bleTest/: bleTest.ino
